Stop line height of #menu from making header too tall in exopps and soo

--- a/export_elements/sass/components/header-footer/_menu.scss
+++ b/export_elements/sass/components/header-footer/_menu.scss
@@ -8,6 +8,7 @@
 #menu {
   float: right;
   margin-top: -54px;
+  line-height: initial;
   background-color: $great-blue;
 
   .links-list a {
